// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers basic reducers CLEAR_GRAPH 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_GRAPH_ERROR 1`] = `
Object {
  "directedShortestPath": true,
  "error": "test",
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_GRAPH_LAYOUT 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "new layout",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_GRAPH_LOADING 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": true,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_MAX_NEIGHBORS 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 1000,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_ROOT_NODE 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {
    "id": 1,
    "label": "test",
    "size": 1,
    "x": 0,
    "y": 0,
  },
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_SELECTED_NODE 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {
      "label": "new selected node",
    },
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_SELECTED_NODE_INFO 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "centrality": undefined,
    "description": undefined,
    "error": undefined,
    "img": undefined,
    "loading": undefined,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers basic reducers SET_TARGET_NODE 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {
    "label": "new target node",
  },
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH adds new values 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [
      Object {
        "color": "black",
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "size": 1,
        "value": "2",
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH does not add duplicate edges or nodes 1`] = `
Object {
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "value": "2",
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH merges new values with old 1`] = `
Object {
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
      Object {
        "color": "black",
        "id": "1->-->--3",
        "source": 1,
        "target": 3,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "value": "2",
      },
      Object {
        "id": 3,
        "size": 1,
        "value": "3",
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
}
`;

exports[`reducers graph SET_GRAPH_PATH adds normal path 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [
      Object {
        "color": "red",
        "id": "744709700->-->--723299825",
        "source": 744709700,
        "target": 723299825,
      },
      Object {
        "color": "red",
        "id": "723299825->-->--677783103",
        "source": 723299825,
        "target": 677783103,
      },
      Object {
        "color": "red",
        "id": "677783103->-->--796940464",
        "source": 677783103,
        "target": 796940464,
      },
      Object {
        "color": "red",
        "id": "744709700->-->--376056243",
        "source": 744709700,
        "target": 376056243,
      },
      Object {
        "color": "red",
        "id": "376056243->-->--517868288",
        "source": 376056243,
        "target": 517868288,
      },
      Object {
        "color": "red",
        "id": "517868288->-->--796940464",
        "source": 517868288,
        "target": 796940464,
      },
      Object {
        "color": "red",
        "id": "744709700->-->--598316364",
        "source": 744709700,
        "target": 598316364,
      },
      Object {
        "color": "red",
        "id": "598316364->-->--266061808",
        "source": 598316364,
        "target": 266061808,
      },
      Object {
        "color": "red",
        "id": "266061808->-->--796940464",
        "source": 266061808,
        "target": 796940464,
      },
    ],
    "nodes": Array [
      Object {
        "color": "red",
        "id": 744709700,
        "label": "6",
        "size": 1,
      },
      Object {
        "color": "red",
        "id": 723299825,
        "label": "51",
        "size": 1,
      },
      Object {
        "color": "red",
        "id": 677783103,
        "label": "61",
        "size": 1,
      },
      Object {
        "color": "red",
        "id": 796940464,
        "label": "32",
        "size": 1,
      },
      Object {
        "color": "red",
        "id": 376056243,
        "label": "79",
        "size": 1,
      },
      Object {
        "color": "red",
        "id": 517868288,
        "label": "74",
        "size": 1,
      },
      Object {
        "color": "red",
        "id": 598316364,
        "label": "1",
        "size": 1,
      },
      Object {
        "color": "red",
        "id": 266061808,
        "label": "31",
        "size": 1,
      },
    ],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;

exports[`reducers graph SET_GRAPH_PATH clears graph if it's already there 1`] = `
Object {
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
}
`;

exports[`reducers graph initializes with correct state 1`] = `
Object {
  "directedShortestPath": true,
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "maxShortestPaths": 5,
  "overallGraphInfo": Object {
    "averageInDegree": 0,
    "averageOutDegree": 0,
    "edges": 0,
    "nodes": 0,
  },
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
  "topInfo": Object {
    "idCache": Object {},
    "pageRank": Array [],
  },
}
`;
